# ledger-bot-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  knowledge_base.txt  manifest.json  requirements.txt  run_tests.sh  test_llm_connection.py  update_knowledge_base.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  default.yml
docs/: DEMO_SCRIPT.md  DEPLOYMENT.md  EXPLORATION_DAY_SUMMARY.md  LESSONS_LEARNED.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_CHECKLIST.md
docs/plans/: 2026-01-23-gl-publisher-mcp-server.md  2026-01-23-hybrid-bot-mcp-architecture.md  2026-01-27-production-infrastructure-design.md
k8s/: deployment.yaml  secret.yaml.template  service.yaml
mcp-server/: QUICK_START.md  README.md  TEAM_INSTALL_GUIDE.md  pyproject.toml
mcp-server/docs/: CLAUDE_DESKTOP_SETUP.md
mcp-server/src/gl_publisher_mcp/: server.py
mcp-server/src/gl_publisher_mcp/tools/: adr_search.py  code_search.py  file_reader.py  impact_builder_finder.py  schema_info.py
mcp-server/src/gl_publisher_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp-server/tests/: test_adr_search.py  test_code_search.py  test_file_reader.py  test_impact_builder_finder.py  test_integration.py  test_resources.py  test_schema_info.py  test_server.py
tests/: README.md  test_app.py
